# foodsoft-printer

./: CMakeLists.txt  characters.c  characters.h  cups.vapi  display.1.c  display.c  display.h  display.vapi  generate_bitmaps.sh  main.vala  splash.fb
debian/: changelog  control
